# Flappy-Bird-Clone

./: CMakeLists.txt  README.md
src/: Background.cpp  Background.h  Bird.cpp  Bird.h  Game.cpp  Game.h  GameObject.h  GameWindow.cpp  GameWindow.h  Ground.cpp  Ground.h  Pipes.cpp  Pipes.h  Sprite.cpp  Sprite.h  main.cpp
